# object-renderer

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cpp-checks.yml  cxx-checks.yml  python-checks.yml
app/: Dockerfile  README.md  main.py  prestart.sh  pyproject.toml
app/api/: __init__.py  main_views.py
app/api/api_v1/: __init__.py  auth.py  upload_file.py
app/core/: constants.py  database.py  exceptions.py  interfaces.py  jwt_utils.py  security.py
app/core/config/: application.py  database.py  jwt.py  minio.py
app/core/interfaces/: clients.py  repositories.py  services.py
app/core/security/: password_utils.py
app/core/security/jwt_tokens/: factory.py  utils.py
app/dependencies/: annotations.py  auth.py  minio.py  services.py
app/infrastructure/: database.py
app/infrastructure/minio/: client.py  session.py
app/migrations/: env.py
app/migrations/versions/: 3f72bb9a1698_update_field_key_length_in_table_files.py  9bcdbab3201e_add_foreign_key_to_files_table.py  a4ab2b347be9_create_users_table.py  e002ce17bce3_create_files_table.py
app/models/: __init__.py  file.py  user.py
app/repositories/: file.py  user.py
app/schemas/: auth.py  constraints.py  file.py  token.py  user.py
app/services/: auth.py  file_uploader.py  model_uploader.py
renderer/: CMakeLists.txt  Dockerfile
renderer/include/: BVH-builder.hpp  BVH.hpp  bvh-builder.hpp  bvh.hpp  denoiser.hpp  render-engine.hpp  render-target.hpp  render-target.inl  scene-loader.hpp  scene.hpp  target-manager.hpp  utils.hpp
renderer/lib/: CMakeLists.txt
renderer/lib/fastgltf/: CMakeLists.txt
renderer/lib/glad/: CMakeLists.txt
renderer/lib/glfw/: CMakeLists.txt
renderer/lib/glm/: CMakeLists.txt
renderer/lib/json/: CMakeLists.txt
renderer/lib/stb/: CMakeLists.txt
renderer/libs/: CMakeLists.txt
renderer/shaders/: gbuffer.glsl  path-tracing.glsl  post-processing.glsl  shader.glsl
renderer/src/: BVH-builder.cpp  BVH.cpp  CMakeLists.txt  bvh-builder.cpp  bvh.cpp  denoiser.cpp  main.cpp  render-engine.cpp  render-target.cpp  scene-loader.cpp  scene.cpp  target-manager.cpp  utils.cpp
renderer/tests/: CMakeLists.txt  test-main.cpp  test.cpp
renderer/tests/bvh/: test-building.cpp  test-intersections.cpp
renderer/tests/utils/: test-readFromFile.cpp  test-rgb-rgba.cpp  test-writeToPng.cpp
